// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input autosize 1`] = `
<div
  className="za-input"
>
  <textarea
    className="za-input"
    disabled={false}
    onChange={[Function]}
    rows={4}
  />
</div>
`;

exports[`Input renders correctly 1`] = `
<div
  class="za-input"
>
  <input
    class="za-input"
    type="text"
  />
</div>
`;

exports[`Input renders type is textarea correctly 1`] = `
<div
  class="za-input"
>
  <textarea
    class="za-input"
    rows="4"
  />
</div>
`;

exports[`Input showLength 1`] = `
<div
  class="za-input"
>
  <textarea
    class="za-input"
    rows="4"
  />
</div>
`;
